[+] No autofill saved password from browser in user configuration #471 (sudwebdesign)
[+] Replace "oui" and "non" in categories.xml and statiques.xml #474 (bazooka07, sudwebdesign)
[+] core/admin/prepend.php refacto and optimisations #458 (bazooka07)
[+] New plugins hooks for plxShow->artNavigation() (sudwebdesign)
FIX Do not unset CSRF token if $_POST is empty #286 (sudwebdesign)
FIX Wording and translation of L_MEDIAS_MAX_UPLOAD_NBFILE #286 (sudwebdesign) 
FIX Wording and translation of L_CONFIG_ADVANCED_USERFOLDERS #286 (sudwebdesign)
FIX Missing polish translations #374 (P3ter)
FIX Article edition always show comments as enabled #402 (bazooka07)
FIX $plxShow->artNbCom() with no comments #432 (bazooka07)
FIX $plxShow->lastArtList() chapo and content length #433 (P3ter)
FIX Templates sorting in static page admin #440 (bazooka07)
FIX Diverses .htaccess fixes #444 (bazooka07)
FIX Error "Constant PLX_SITE_LANG already defined" #455 (bazooka07)
FIX Media breadcrumb links #470 #472 (sudwebdesign, bazooka07)

## PLUXML 5.8.3 (2020/05/19) ##
[+] New Fontello icons on authentification page and in the admin panel (bazooka07)
[+] Enhancement for CSRF token #385 (bazooka07)
[+] New "rename" and "copy to clipboard" icons in medias administration page #387 (bazooka07)
[+] plxMotor and plxFeed regex refacto #380 (P3ter, bazooka07)
[+] plxToken and plxCapcha optimisations #406 (bazooka07)
[+] plxShow->artThumbnail can have a link to the article #426 (Thatoo)
FIX Articles and static pages with underscores are not visible #380 (P3ter)
FIX Headline and Tags toggles always closed in article edition #382 (sudwebdesign)
FIX Fix medias administration zoombox and javascript optimisations #387 (bazooka07)
FIX Error when adding or modifying a user #393 (P3ter)
FIX Alternative to PHPMailer with sendmail #401 (bazooka07)
FIX Used of an extern URL as a static page #403 (bazooka07)
FIX Comment editor is empty #418 (P3ter)
FIX Comments list sorting #419 (P3ter)