@@ -24,6 +24,7 @@
 [+] Replace "oui" and "non" in categories.xml and statiques.xml #474 (bazooka07, sudwebdesign)
 [+] core/admin/prepend.php refacto and optimisations #458 (bazooka07)
 [+] New plugins hooks for plxShow->artNavigation() (sudwebdesign)
+[+] Add sitemap.xml validation (P3ter)
 FIX Do not unset CSRF token if $_POST is empty #286 (sudwebdesign)
 FIX Wording and translation of L_MEDIAS_MAX_UPLOAD_NBFILE #286 (sudwebdesign) 
 FIX Wording and translation of L_CONFIG_ADVANCED_USERFOLDERS #286 (sudwebdesign)
